--- a/pcMembers.html
+++ b/pcMembers.html
@@ -3,6 +3,6 @@
 <html>
 <head>
 <title>Redirection page </title>
-<meta http-equiv="refresh" content="0; URL=https://rrpr2020.sciencesconf.org/resource/page/id/2" />
+<meta http-equiv="refresh" content="0; URL=https://rrpr2020.sciencesconf.org/page/committees" />
 </head>
 </html>
